[add] シグモイド関数関係のファイル追加

--- a/NSL/Makefile
+++ b/NSL/Makefile
@@ -38,7 +38,8 @@ PMODE		= JTAG
 
 #VERIOPT	= -LDFLAGS -lX11
 #SRCS		= ADD.nsl SUB.nsl ADDSUB.nsl
-SRCS		= MUL.nsl MUL_FIXP.nsl
+#SRCS		= MUL.nsl MUL_FIXP.nsl
+SRCS		= ADD.nsl SUB.nsl ADDSUB.nsl MUL.nsl MUL_FIXP.nsl SIGMOID.nsl
 VFILES 		= $(SRCS:%.nsl=%.v) 
 LIBS		=
 RESULT		= result.txt
