[add] 逆数関係のファイル追加

--- a/NSL/Makefile
+++ b/NSL/Makefile
@@ -39,7 +39,8 @@ PMODE		= JTAG
 #VERIOPT	= -LDFLAGS -lX11
 #SRCS		= ADD.nsl SUB.nsl ADDSUB.nsl
 #SRCS		= MUL.nsl MUL_FIXP.nsl
-SRCS		= ADD.nsl SUB.nsl ADDSUB.nsl MUL.nsl MUL_FIXP.nsl SIGMOID.nsl
+#SRCS		= ADD.nsl SUB.nsl ADDSUB.nsl MUL.nsl MUL_FIXP.nsl SIGMOID.nsl
+SRCS		= ADD.nsl SUB.nsl ADDSUB.nsl MUL.nsl MUL_FIXP.nsl RECIPROCAL.nsl
 VFILES 		= $(SRCS:%.nsl=%.v) 
 LIBS		=
 RESULT		= result.txt
